# fastplotlib

./: .gitattributes  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MANIFEST.in  README.md  apt.txt  codecov.yml  pyproject.toml  requirements.txt  requirements_rtd.txt  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: black.yml  build-gallery.yml  ci-pygfx-release.yml  ci.yml  docs-deploy.yml  docs.yml  lint.yml  pypi-publish.yml  screenshots.yml  sphinx.yml
docs/: doc_build_instructions.md
docs/source/: conf.py  fastplotlib_banner.xcf  fastplotlib_logo.xcf  generate_api.py  generate_rst.py  index.rst  quickstart.ipynb
examples/: README  README.md  README.rst  app.py  buttons.ipynb  collection.ipynb  event_handler.ipynb  event_linecollection.ipynb  event_single_contour.ipynb  fast_line_collection.ipynb  garbage_collection.ipynb  gridplot.ipynb  gridplot_simple.ipynb  gridplot_simple.py  histogram.ipynb  image_widget.ipynb  imagewidget.ipynb  line_collection_event.ipynb  linear_region_selector.ipynb  linear_selector.ipynb  linecollection_event.ipynb  lineplot.ipynb  multiprocessing_lineplot.ipynb  scatter.ipynb  selector_performance.ipynb  simple.ipynb  single_contour_event.ipynb  streaming_lineplot.ipynb  text.ipynb
examples/controllers/: README.rst  partial_camera_linking.py  specify_integers.py  specify_names.py  sync_all.py
examples/data/: 2Drand.npy  iris.npy
examples/desktop/: README.rst
examples/events/: README.rst  cmap_event.py  drag_points.py  image_click.py  image_data_event.py  key_events.py  line_data_thickness_event.py  lines_mouse_nearest.py  paint_image.py  scatter_click.py  scatter_hover.py  scatter_hover_transforms.py
examples/features/: 2Drgbvminvmax.py  2Dvminvmax.py  colorslice.py  dataslice.py
examples/flex_layouts/: README.rst  extent_frac_layout.py  extent_layout.py  rect_frac_layout.py  rect_layout.py
examples/gridplot/: README.rst  gridplot.py  gridplot_cmap.py  gridplot_non_square.py  gridplot_simple.py  gridplot_viewports_check.py  gridplot_vminvmax.py  multigraphic_gridplot.py
examples/guis/: README.rst  collapsible_gui.py  image_widget_imgui.py  imgui_basic.py  imgui_decorator.py  imgui_file_dialog.py  imgui_top.py  many_ui.py  sine_cosine_funcs.py
examples/heatmap/: heatmap.py
examples/image/: cmap.py  image_cmap.py  image_reshaping.py  image_rgb.py  image_rgbvminvmax.py  image_simple.py  image_small.py  image_vminvmax.py  rgb.py  rgbvminvmax.py  simple.py  vminvmax.py
examples/image_volume/: README.rst  image_volume_4d.py  image_volume_mip.py  image_volume_multi_channel.py  image_volume_non_orthogonal_slicing.py  image_volume_ray.py  image_volume_render_modes.py  image_volume_share_buffer.py  image_volume_slicing_animation.py  image_volume_toy_data.py  multi_channel.py  volume_render_modes.py
examples/image_widget/: README.rst  image_widget.py  image_widget_grid.py  image_widget_single_video.py  image_widget_videos.py  image_widget_viewports_check.py  image_widget_viewports_test.py  video_roi_points.py
examples/imagewidget/: iw_simple.py
examples/ipywidgets/: README.rst  ipywidgets_modify_image.py  ipywidgets_sliders_line.py
examples/line/: README.rst  colorslice.py  dataslice.py  line.py  line_cmap.py  line_cmap_more.py  line_colorslice.py  line_dataslice.py  line_present_scaling.py  present.py
examples/line_collection/: README.rst  line_collection.py  line_collection_cmap_values.py  line_collection_cmap_values_qualitative.py  line_collection_colors.py  line_collection_slicing.py  line_stack.py  line_stack_3d.py
examples/machine_learning/: README.rst  covariance.py  kmeans.py  neural_net.ipynb
examples/mesh/: README.rst  image_surface.py  mesh.py  polygon_animation.py  polygons.py  surf.py  surface.py  surface_earth.py  surface_ellipsoid.py  surface_gaussian.py  surface_height.py  surface_ripple.py  surface_sphere_ripple.py  surface_terrain.py
examples/misc/: README.rst  buffer_replace_gc.py  cursor_custom_tooltip.py  cursor_manual.py  cursor_transform.py  cursors.py  cursors_marker.py  cycle_animation.py  em_wave_animation.py  galaxy_collision.py  garbage_collection.py  image_animation.py  large_img.py  line3d_animation.py  line_animation.py  lorenz_animation.py  multiplot_animation.py  phase_plot_ode.py  reshape_lines_scatters.py  scatter_animation.py  scatter_sizes_animation.py  simple_event.py  tooltips.py  tooltips_custom.py
examples/misc-dev/: garbage_collection.py  selector_performance.ipynb
examples/ndwidget/: README.rst  ndimage.py  timeseries.py
examples/notebooks/: gridplot.ipynb  gridplot_simple.ipynb  heatmap.ipynb  image_widget.ipynb  image_widget_test.ipynb  linear_region_selector.ipynb  linear_selector.ipynb  linear_selector_test.ipynb  lineplot.ipynb  lines_cmap.ipynb  nb_test_utils.py  quickstart.ipynb  (+9 more)
fastplotlib/: VERSION  __init__.py  _version.py  defaults.py  generate_colormaps.py  graphics.py  layouts.py  plot.py  subplot.py  utils.py
notebooks/: garbage_collection.ipynb  gridplot_simple.py  image_widget.ipynb  line_collection.ipynb  linear_region_selector.ipynb  linear_selector.ipynb  lineplot.ipynb  scatter.ipynb  simple.ipynb
scripts/: generate_add_graphic_methods.py
tests/: conftest.py  events.py  test_buffer_manager.py  test_colors_buffer_manager.py  test_common_features.py  test_figure.py  test_gridplot.py  test_image_graphic.py  test_image_volume_graphic.py  test_markers_buffer_manager.py  test_plot_helpers.py  test_point_rotations_buffer_manager.py  test_points_data_buffer_manager.py  test_positions_data_buffer_manager.py  test_positions_graphics.py  test_replace_buffer.py  test_scatter_graphic.py  test_sizes_buffer_manager.py  test_text_graphic.py  test_texture_array.py  test_texture_array_volume.py  utils.py  utils_textures.py
(+1922 files in other folders)
