# ===== Project info

[project]
dynamic = ["version"]
name = "fastplotlib"
description = "Next-gen fast plotting library running on WGPU using the Pygfx rendering engine "
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Kushal Kolar" }, { name = "Caitlin Lewis" }]
keywords = [
    "visualization",
    "science",
    "interactive",
    "pygfx",
    "webgpu",
    "wgpu",
    "vulkan",
    "gpu",
]
requires-python = ">= 3.10"
dependencies = [
    "numpy>=1.23.0",
    "pygfx>=0.9.0",
    "wgpu>=0.20.0",
    "cmap>=0.1.3",
    # (this comment keeps this list multiline in VSCode)
]

[project.optional-dependencies]
lint = ["ruff"]
docs = [
    "sphinx",
    "sphinx-gallery",
    "pydata-sphinx-theme",
    "glfw",
    "ipywidgets>=8.0.0,<9",
    "sphinx-copybutton",
    "sphinx-design",
    "pandoc",
    "imageio[ffmpeg]",
    "matplotlib",
    "scikit-learn",
]
notebook = [
    "jupyterlab",
    "jupyter-rfb>=0.5.1",
    "ipywidgets>=8.0.0,<9",
    "sidecar",
]
tests = [
    "pytest",
    "nbmake",
    "black",
    "scipy",
    "imageio[ffmpeg]",
    "scikit-learn",
    "tqdm",
]
imgui = ["imgui-bundle"]
dev = ["fastplotlib[lint,docs,notebook,tests,imgui]"]

[project.urls]
Homepage = "https://www.fastplotlib.org/"
Documentation = "https://www.fastplotlib.org/"
Repository = "https://github.com/fastplotlib/fastplotlib"

# ===== Building

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

# ===== Tooling

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "N", "B", "RUF", "TC"]
ignore = [
    "F403",   # `from typing import *` used; unable to detect undefined names -> Would be good to fix this one and the next
    "F405",   # X may be undefined, or defined from star imports
    "F841",   # Local variable X is assigned to but never used"
    "E501",   # Line too long
    "B007",   # Loop control variable X not used within loop body
    "B028",   # No explicit X keyword argument found
    "B905",   # `zip()` without an explicit `strict=` parameter
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]
